--- a/medusa-storefront/package.json
+++ b/medusa-storefront/package.json
@@ -36,6 +36,7 @@
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
+    "medusa-plugin-meilisearch": "^2.0.11",
     "medusa-react": "^9.0.0",
     "next": "^14.0.0",
     "pg": "^8.11.3",
@@ -61,7 +62,7 @@
     "@types/react-instantsearch-dom": "^6.12.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
-    "eslint": "8.10.0",
+    "eslint": "^9.8.0",
     "eslint-config-next": "^13.4.5",
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
